# Spell

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  index.html
.github/ISSUE_TEMPLATE/: bug_report.md
spell/: Cargo.toml
spell-cli/: Cargo.toml  README.md
spell-cli/component_libs/vivi/magic/: magic_list_view.slint
spell-cli/src/: constant_files.rs  constantvals.rs  main.rs
spell-demo/: Cargo.toml
spell-demo/src/: main.rs
spell-demo/ui/: app-window.slint
spell-framework/: Cargo.toml  README.md
spell-framework/docs/: cast_spell.md  entry.md  generate_widgets.md
spell-framework/examples/: cursor_test.rs
spell-framework/src/: configure.rs  dbus_window_state.rs  dummy_skia_docs.rs  event_macros.rs  forge.rs  lib.rs  shared_context.rs  skia_non_docs.rs  slint_adapter.rs  vault.rs  wayland_adapter.rs
spell-framework/src/dbus_window_state/: second_client.rs
spell-framework/src/vault/: application.rs  notification_manager.rs
spell-framework/src/wayland_adapter/: fractional_scaling.rs  lock_impl.rs  pointer_button.rs  slint_to_wl_cursor_mapping.rs  smithay_to_slint_mouse_button_mapping.rs  states_and_handles.rs  viewporter.rs  way_helper.rs  win_impl.rs
spell-framework/src/wayland_adapter/widget_impls/: lock_impl.rs  mod.rs  popup_impl.rs  win_impl.rs
spell/docs/: entry.md
spell/src/: configure.rs  dbus_window_state.rs  forge.rs  lib.rs  shared_context.rs  slint_adapter.rs  wayland_adapter.rs
spell/src/dbus_window_state/: second_client.rs
spell/src/wayland_adapter/: states_and_handles.rs  window_state.rs
src/: configure.rs  constantvals.rs  lib.rs  main.rs  shared_context.rs  skia_adapter.rs  slint_adapter.rs  wayland_adapter.rs
src/wayland_adapter/: window_state.rs
