[workspace]
resolver = "2"
members = ["spell-framework", "spell-cli"]

# [package.metadata.docs.rs]
# no-default-features = true
# features = ["docs-only"]
#
[patch.crates-io]
slint = { git = "https://github.com/slint-ui/slint" }
slint-build = { git = "https://github.com/slint-ui/slint" }
i-slint-core = { git = "https://github.com/slint-ui/slint" }
i-slint-renderer-skia = { git = "https://github.com/slint-ui/slint" }
pam-sys = { path = "../pam-sys/" }
