[workspace]
resolver = "2"
members = ["spell-framework", "spell-cli"]

# [package.metadata.docs.rs]
# no-default-features = true
# features = ["docs-only"]
#
[patch.crates-io]
slint = { git = "https://github.com/slint-ui/slint" }
slint-build = { git = "https://github.com/slint-ui/slint" }
i-slint-core = { git = "https://github.com/slint-ui/slint" }
i-slint-renderer-skia = { git = "https://github.com/slint-ui/slint" }
# pam-sys = { package = "pam-sys-fork", version = "1.0.0-alpha5" }
# pam-sys = { git = "https://github.com/VimYoung/pam-sys-fork", branch = "master" }
