[package]
name = "spell-cli"
version = "0.1.1"
edition = "2024"
description = "CLI for spell-framework"
license = "GPL-3.0-or-later"
repository = "https://github.com/VimYoung/Spell"
keywords = ["widget", "spell-framework", "spell", "slint", "wayland"]

[dependencies]
spell-framework = { version = "0.1.1", path = "../spell-framework/" }
zbus = "5.8.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] }

[package.metadata.docs.rs]
no-default-features = true
features = ["docs-only"]

[build-dependencies]
slint-build = "1.8.0"
