[package]
name = "spell-cli"
version = "1.0.1"
edition = "2024"
description = "CLI for spell-framework"
license = "GPL-3.0-or-later"
repository = "https://github.com/VimYoung/Spell"
keywords = ["widget", "spell-framework", "spell", "slint", "wayland"]

[[bin]]
name = "sp"
path = "src/main.rs"

[dependencies]
# spell-framework = { path = "../spell-framework/" }
spell-framework = "1.0.0"
zbus = "5.11.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }

[package.metadata.docs.rs]
no-default-features = true
features = ["docs-only"]

[build-dependencies]
slint-build = "1.13.0"
