[package]
name = "spell-framework"
version = "0.1.5"
edition = "2024"
description = "Make desktop widgets by the Mystic Arts of Spell"
license = "GPL-3.0-or-later"
repository = "https://github.com/VimYoung/Spell"
keywords = ["widget", "rice", "spell", "slint", "wayland"]
exclude = ["/src/bin/*"]

[dependencies]
bytemuck = "1.23.1"
env_logger = "0.11.7"
event-listener = "5.4.0"
fs2 = "0.4.3"
futures-util = "0.3.31"
i-slint-core = "1.11.0"
i-slint-renderer-skia = { version = "1.11.0", features = [
  "wayland",
], optional = true }
owo-colors = "4.2.2"
pam-client = { version = "0.5.0", features = [
  "rpassword",
  "cli",
], optional = true }
rust-fuzzy-search = "0.1.1"
signal-hook = "0.3.18"
slint = { version = "1.12.0", features = [
  "raw-window-handle-06",
  "renderer-software",
] }
smithay-client-toolkit = "0.20.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std"] }
tracing-rfc-5424 = "0.1.4"
zbus = "5.7.1"

[package.metadata.docs.rs]
no-default-features = true
features = ["docs-only"]

# [patch.crates-io]
# pam-sys = { git = "https://github.com/VimYoung/pam-sys" }

[features]
default = ["i-slint-renderer-skia", "slint", "pam"]
docs-only = []
pam = ["pam-client"]
slint = ["i-slint-renderer-skia"]
