[package]
name = "spell-framework"
version = "0.1.5"
edition = "2024"
description = "Make desktop widgets by the Mystic Arts of Spell"
license = "GPL-3.0-or-later"
repository = "https://github.com/VimYoung/Spell"
keywords = ["widget", "rice", "spell", "slint", "wayland"]
exclude = ["/src/bin/*"]

[dependencies]
env_logger = "0.11.7"
event-listener = "5.4.0"
fs2 = "0.4.3"
futures-util = "0.3.31"
i-slint-core = "1.13.0"
i-slint-renderer-skia = { version = "1.13.0", features = [
  "wayland",
], optional = true }
owo-colors = "4.2.2"
rust-fuzzy-search = "0.1.1"
signal-hook = "0.3.18"
slint = { version = "1.13.0", features = [
  "raw-window-handle-06",
  "renderer-software",
] }
smithay-client-toolkit = "0.20.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std"] }
tracing-rfc-5424 = "0.1.4"
zbus = "5.10.0"
nonstick = "0.1.1"

[package.metadata.docs.rs]
no-default-features = true
features = ["docs-only"]

[features]
default = ["i-slint-renderer-skia", "slint"]
docs-only = []
slint = ["i-slint-renderer-skia"]
